force-app/main/default/objects/SmartIntake_Template_Route__mdt/SmartIntake_Template_Route__mdt.object-meta.xml
<CustomObject>
    <label>SmartIntake Template Route</label>
    <pluralLabel>SmartIntake Template Routes</pluralLabel>
</CustomObject>