force-app/main/default/objects/SmartIntake_Template_Route__mdt/fields/Route_Key__c.field-meta.xml
<CustomField>
    <fullName>Route_Key__c</fullName>
    <label>Route Key</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>